# nlp-translate-transformers

./: .gitignore  1_data_format.py  2_eng2hindi_trainer.py  3_eng2bengali_trainer.py  4_train_bpe.py  5_eng2hindi_bpe_trainer.py  6_eng2bengali_bpe_trainer.py  pyproject.toml  run_overnight.py  tokenizer_debug.ipynb  translate_exp3.ipynb  translate_exp4.ipynb  translate_exp4_best_submission.ipynb  translate_exp4point1.ipynb  translate_exp5.ipynb
EE958-CP-Vasudev-Gupta-241562575-code/: 1_data_format.py  3_eng2bengali_trainer.py  4_train_bpe.py  6_eng2bengali_bpe_trainer.py  environment.yml  requirements.txt  translate_exp3.ipynb
EE958-CP-Vasudev-Gupta-241562575-code/src/: components.py  dataloader.py  scores.py  torchlayers.py  utils.py
EE958-CP-Vasudev-Gupta-241562575-code/src/tokenizers/: eng.py  indic.py
EE958-CP-Vasudev-Gupta-241562575-code/src/tokenizers/bpe/: eng.py
EE958-CP-Vasudev-Gupta-241562575-code/tokenizers/: hindi_bpe_20000.pkl
data/processed/: eng2bengali_val.jsonl  eng2hindi_val.jsonl
data/raw/: val_data1.json
latexreport/: main.tex  references.bib
report material/: wandb_export_2025-08-28T17_08_51.194+05_30.csv
src/: components.py  datacleaner.py  dataloader.py  scores.py  torchlayers.py
src/tokenizers/: eng.py  indic.py
src/tokenizers/bpe/: indic.py
tokenizers/: bengali_bpe_20000.pkl  bengali_bpe_30000_1024.pkl  english_shared_bpe_20000_256.pkl  english_shared_bpe_30000_1024.pkl  hindi_bpe_30000.pkl
